public/style.css
/* ... */
.mes_text h1 {
    font-weight: bold;
    color: rgb(229, 224, 216);
}
code {
  background-color: #a8a8a8;
  padding: 5px;
  font-family: Consolas, monospace;
  color: #333;
  white-space: pre-wrap;
  word-wrap: break-word;
}
#bg1{
    background-image: linear-gradient(rgba(19,21,44,0.75), rgba(19,21,44,0.75)), url(backgrounds/tavern.png);
    background-size: auto 100%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    filter: blur(2px);
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -2;
}
#bg2{
    background: linear-gradient(rgba(19,21,44,0.75), rgba(19,21,44,0.75)), url(backgrounds/tavern.png);
    background-size: auto 100%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    filter: blur(2px);
    background-size: cover;
    opacity: 0.0;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
}
#sheld {
    display: grid;
    grid-template-rows: auto 145px;
    background: #191b3133;
    height: 100vh;
    overflow: auto;
    overflow-x: hidden;
    overflow-y: hidden;
    max-width:800px;
    margin-left: auto;
    margin-right: auto;
    /* border-right: 0.1px solid gray; */
    /* border-left: 0.1px solid gray; */
    /* box-shadow: 0 0 2px rgba(200,200,200,0.1); */
}

#chat {
    scrollbar-width: thin;
    /* width: 900px; */
    /* height: 80%; */
    overflow: hidden;
    overflow-y: scroll;
    background: #191b3100;
    /* white-space:nowrap; */
    /* margin-left: 30%; /* Отступ слева */ */
    /* width: 40%; /* Ширина слоя */ */
    /* padding: 10px; /* Поля вокруг текста */ */
}

::-webkit-scrollbar {
    width: .60em;
    /* background-color: blue; */
}

::-webkit-scrollbar-track {
    background-color: #191b31;
}

::-webkit-scrollbar-thumb {
    background: gray;
    border-radius: 1px;
    box-shadow: inset 0.05em 0.05em 0 rgba(0, 0, 0, 0.1), inset 0 -0.05em 0 rgba(0, 0, 0, 0.07);
}
#form_sheld {
    /* box-shadow: 0 0 2px rgba(200,200,200,0.5); */
    box-shadow: 0 0 2px rgba(200,200,200,0.1);
    white-space:nowrap;
    background: #191b31A0;
    /* height: 10%; */
    /* margin-left: 30%; /* Отступ слева */ */
    /* width: 95%; /* Ширина слоя */ */
    /* padding: 10px; /* Поля вокруг текста */ */
    /* background: red; */
    /* margin-left: auto; */
    /* margin-right: auto; */
}
#send_form {
    display: grid;
    grid-template-columns: 35px auto 60px;
    /* background: green; */
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}
#send_textarea{
    /* width:100%;  */
    font-size: 11pt; 
    height: 89px;
    resize: none;
    display:inline-block;
    background-color: #13152c;
    outline: none !important;
    border:0px solid grey;
    box-shadow: 0 0 2px rgba(200,200,200,0.5);
    padding: 10px;
    color: #e6e6e6;
    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    font-size: 18px;
    margin-left: 10px;
    margin-top: 10px;
}
#send_but_sheld{
    /* display:inline-block; */
    /* height: 100%; */
    /* margin-left: 17px; */
    /* background: blue; */
    
}
#send_but{
    /* visibility: visible; */
    width: 100%;
    margin: 0 auto;
    margin-left: 4px;
    display: block;
    height: 100%;
    background: url('img/send3.png') no-repeat top left;
    background-size: 26px auto;
    background-position: center center;
    outline:          none;
    border:           none;
    cursor:           pointer;
}
#loading_mes{
    display: none;
    width: 100%;
    height: 100%;
    margin: 0 auto;
    margin-left: 2px;
    /* visibility: collapse; */
    background: url('img/load.svg') no-repeat top left;
    background-size: 45px 45px;
    background-position: center center;
}
#options_button{
    margin-top: 0px;
    cursor: pointer;
    /* opacity: 0.5; */
    position: block;
    width:40px;
    height: 40px;
    background-image: url('img/options2.png');
    background-size: contain;
    background-repeat: no-repeat;
    
    /* background-size: 20px; */
}
#options{
    
    border-radius: 5px;
    opacity: 0.0;
    display: none;
    width: 200px;
    height: 100px;
    bottom: 196px;
    position: relative;
    /* background-color: blue; */
    z-index:1990;
   
}
.options-content {
    overflow: hidden;
  display: block;
  position: absolute;
  background-color: #191b31F3;
  min-width: 205px;
  z-index: 1;
  /* bottom: 1px; */
}

/* Ссылки внутри выпадающего блока */
.options-content hr {
  margin: 0px;
  padding: 0px;
  border-top: 1px solid #ffffff11;
}
.nav hr{
    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
}
.options-content a {
  color: #ffffff55;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}
.options-content img {
  opacity: 0.5;
  margin-right: 5px;
}

/* Изменяем цвет ссылки при наведении */
.options-content a:hover {background-color: #ffffff05}


.mes {
    display: grid;
    grid-template-columns: fit-content(60px) 60px auto;
    border-radius: 5px;
    box-shadow: 0 0 2px rgba(200,200,200,0.1);
    padding: 4px;
    background: #191b31CC;
    /* box-shadow: 0 0 2px rgba(200,200,200,0.5); */
    
    
    /* display: inline-block; */
    vertical-align: top;
    width: 100%;
    /* height:60px; */
    /* background: red; */
    /* font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif; */
    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    color: rgb(229, 224, 216);
    font-size: 18px;
    /* background: blue; */
    margin-bottom: 26px;
}
/* ... */

